ISSUE-76 - switch - Move switch task dispatcher, update